# pypi-docs-url

./: README.md  pyproject.toml
early_demos/: demo.py  demo_2.py  demo_3.py  demo_4.py  demo_5.py
src/pypi_docs_url/: __init__.py  cli.py  core.py  docs_intersphinx.py  github_integration.py  pypi_api.py
tests/: find_docs_test.log.txt  find_docs_test.py  polars_test.py
